[project]
name = "comfyui_hf_inference"
description = "Unofficial support for Hugging Face's hosted inference."
version = "1.0.0"
license = "LICENSE"
dependencies = ["requests"]

[project.urls]
Repository = "https://github.com/bitaffinity/ComfyUI_HF_Inference"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_HF_Inference"
Icon = ""
